# CudaKernels

./: .gitignore  CMakeLists.txt  README.md
docs/: bank_conflict_viz.html  blelloch_scan_tree_viz.html  conv2d_halo_tiling_viz.html  memory_hierarchy_occupancy_viz.html  register_tiled_matmul_viz.html
docs/notes/: cuda_lecture_notes.html
include/core/: cuda_utils.h
include/linalg/: dotprod.h  gemv.h  matmul.h  transpose.h
include/scan/: scan.h
include/stencil/: conv.h
scripts/: plot_perf.py
src/linalg/: dotprod.cu  gemv.cu  matmul_naive.cu  matmul_tiled.cu  transpose.cu
src/scan/: scan.cu
src/stencil/: conv.cu
tests/: test_conv1d.cu  test_conv2d.cu  test_dotprod.cu  test_gemv.cu  test_matmul.cu  test_scan.cu  test_transpose.cu  test_utils.h
